<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">三国</string>

	<string name="err_nickname_length_limit">昵称长度必须是%1$d到%2$d</string>
	<string name="err_lineup_hero_num_limit">上阵人数必须是%1$d到%2$d</string>
	<string name="err_update_failed">更新失败，新重试</string>

	<string name="msg_battle_start">战斗开始</string>
	<string name="msg_checking_update">检查更新中……</string>
	<string name="msg_cost">消耗:%1$d</string>
	<string name="msg_delete_download_hint">%1$d个文件将要被删除\n%2$d个文件将要下载</string>
	<string name="msg_deleting_files">正在删除 %1$d/%2$d\n%3$s</string>
	<string name="msg_downloading_files">正在下载 %1$d/%2$d\n%3$s</string>
	<string name="msg_exit_battle_confirm">是否要退出战斗？</string>
	<string name="msg_first_cd">进场:%1$d</string>
	<string name="msg_input_nickname">请输入昵称</string>
	<string name="msg_repeat_cd">冷却:%1$d</string>
	<string name="msg_press_two_times_to_exit">连按两次退出</string>
	<string name="msg_round_index_max">回合 %1$d/%2$d</string>
	<string name="msg_round_index">第 %1$d 回合</string>
	<string name="msg_update_to_latest_version">已经是最新\n正在进入游戏……</string>
	<string name="msg_waiting_rand_battle">等待匹配中\n%1$d</string>

	<string name="wd_attack">攻击</string>
	<string name="wd_battle">战斗</string>
	<string name="wd_cancel">取消</string>
	<string name="wd_confirm">确认</string>
	<string name="wd_connecting">连接中</string>
	<string name="wd_defence">防御</string>
	<string name="wd_draw">平局</string>
	<string name="wd_health">生命</string>
	<string name="wd_hero">英雄</string>
	<string name="wd_history">历史</string>
	<string name="wd_lose">失败</string>
	<string name="wd_ok">好的</string>
	<string name="wd_offline">离线</string>
	<string name="wd_online">在线</string>
	<string name="wd_unkonwn">未知</string>
	<string name="wd_win">胜利</string>
</resources>
