<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:stone="http://schemas.android.com/apk/res-auto"
	android:id="@+id/vg_root"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="horizontal"
	android:background="@color/main_bg">

	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:orientation="vertical">

		<com.as.metro.MetroLayout
			android:id="@+id/ml_roleinfo"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:orientation="vertical"
			stone:color="@color/metro_nor"
			stone:color_pressed="@color/metro_pre">

			<TextView
				android:id="@+id/tv_nickname"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:gravity="center"
				android:textSize="@dimen/main_text_small"
				android:textColor="@color/main_text" />

		</com.as.metro.MetroLayout>

		<com.as.metro.MetroLayout
			android:id="@+id/ml_hero"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			stone:color="@color/metro_nor"
			stone:color_pressed="@color/metro_pre">

			<TextView
				android:id="@+id/tv_hero"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center"
				android:textSize="@dimen/main_text_small"
				android:textColor="@color/main_text"
				android:text="@string/wd_hero" />

		</com.as.metro.MetroLayout>

	</LinearLayout>

	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:orientation="vertical">

		<com.as.metro.MetroLayout
			android:id="@+id/ml_battle"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			stone:color="@color/metro_nor"
			stone:color_pressed="@color/metro_pre">

			<TextView
				android:id="@+id/tv_battle"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center"
				android:textSize="@dimen/main_text_small"
				android:textColor="@color/main_text"
				android:text="@string/wd_battle" />

		</com.as.metro.MetroLayout>

		<com.as.metro.MetroLayout
			android:id="@+id/ml_history"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			stone:color="@color/metro_nor"
			stone:color_pressed="@color/metro_pre">

			<TextView
				android:id="@+id/tv_history"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center"
				android:textSize="@dimen/main_text_small"
				android:textColor="@color/main_text"
				android:text="@string/wd_history" />

		</com.as.metro.MetroLayout>

	</LinearLayout>

</LinearLayout>
